prevent zooming on mobile input

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -58,6 +58,10 @@ body {
   .maximize {
     display: none;
   }
+  body {
+    font-size: 16px;
+  }
+  input, select { font-size: 100%;}
 }
 
 
